Implemented static analysis suggestions and fixed an issue where the Database class would break when no rows were returned for the retrieve function